--- a/game/game/src/screens/choosePlayerName/index.css
+++ b/game/game/src/screens/choosePlayerName/index.css
@@ -65,3 +65,8 @@
 .js-form__button {
   margin-top: 1rem;
 }
+
+/* js-player-name */
+.js-player-name {
+  padding: 0 !important;
+}
